# codex_portfolio

./: .env.example  .gitignore  README.md  auth.py  config.py  db_models.py  main.py  models.py  pyproject.toml
backend/: .env.example  auth_routes.py  coingecko.py  config.py  database.py  db_models.py  pyproject.toml
backend/tests/: test_auth_routes.py  test_config.py  test_main.py  test_models.py  test_transactions.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/portfolio/current-value/: route.ts
frontend/src/app/api/transactions/: route.ts
frontend/src/app/api/transactions/[id]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/transactions/[id]/: page.tsx
frontend/src/components/: app-shell.tsx
frontend/src/components/auth/: auth-shell.tsx  login-form.tsx  register-form.tsx
frontend/src/components/dashboard/: add-transaction-dialog.tsx  portfolio-dashboard.tsx
frontend/src/components/transactions/: transaction-detail.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  table.tsx
frontend/src/lib/: format.ts  types.ts
frontend/src/lib/server/: api.ts
tests/: test_auth.py  test_models.py  test_transactions.py
